src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ODM_First_Name__c</fullName>
        <inlineHelpText>Other Decision Maker first name</inlineHelpText>
        <label>ODM First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Last_Name__c</fullName>
        <inlineHelpText>Other Decision Maker Last Name</inlineHelpText>
        <label>ODM Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Mobile_Phone__c</fullName>
        <inlineHelpText>Other Decision Maker Mobile Phone Number</inlineHelpText>
        <label>ODM Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ODM_Phone__c</fullName>
        <inlineHelpText>Other Decision Maker Home Phone Number</inlineHelpText>
        <label>ODM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ODM_Primary_Phone__c</fullName>
        <description>Other Decision Maker&apos;s Preferred Primary Phone</description>
        <label>ODM Primary Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODM_Salutation__c</fullName>
        <inlineHelpText>Other Decision Maker Salutation</inlineHelpText>
        <label>ODM Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hon.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODM_Work_Phone__c</fullName>
        <inlineHelpText>Other Decision Maker Work Phone Number</inlineHelpText>
        <label>ODM Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Objections_Obstacles__c</fullName>
        <description>What are the customer&apos;s objections to going solar?</description>
        <inlineHelpText>What are the customer&apos;s objections to going solar?</inlineHelpText>
        <label>Objections / Obstacles</label>
        <picklist>
            <picklistValues>
                <fullName>Not Stated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affordability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Competitive Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>What is the customer&apos;s occupation?</description>
        <inlineHelpText>What is the customer&apos;s occupation?</inlineHelpText>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;On Hold&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Hold Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Until__c</fullName>
        <description>The date to keep this lead on hold.</description>
        <inlineHelpText>The date to keep this lead on hold.</inlineHelpText>
        <label>On Hold Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_New_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;Open – New&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open - New Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orig_2nd_Lead_Source_Detail__c</fullName>
        <description>Original User Input 2nd Lead Source Detail</description>
        <label>Orig 2nd Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_2nd_Lead_Source__c</fullName>
        <description>Original User Input second Lead Source</description>
        <label>Orig 2nd Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_2nd_Referring_Account__c</fullName>
        <label>Orig 2nd Referring Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_2nd_Source_Campaign__c</fullName>
        <label>Orig 2nd Source Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Company_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orig Company Office</label>
        <referenceTo>Office_Location__c</referenceTo>
        <relationshipLabel>Leads (Orig Company Office)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orig_Lead_Source_Detail__c</fullName>
        <description>Original user Input Lead Source Detail</description>
        <label>Orig Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Lead_Source__c</fullName>
        <description>Original User Input Lead Source</description>
        <label>Orig Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Method_Of_Contact__c</fullName>
        <label>Orig Method Of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Primary_Source_Campaign__c</fullName>
        <description>Original User Input Primary Source Campaign</description>
        <label>Orig Primary Source Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Referring_Account__c</fullName>
        <description>Original User Input Referring Account</description>
        <label>Orig Referring Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_vs_Lease__c</fullName>
        <description>Does the customer own or lease the property?</description>
        <inlineHelpText>Does the customer own or lease the property?</inlineHelpText>
        <label>Own vs Lease</label>
        <picklist>
            <picklistValues>
                <fullName>Prefers Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefers Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phonetic_Pronunciation__c</fullName>
        <description>How is this contact&apos;s name pronounced?</description>
        <inlineHelpText>How is this contact&apos;s name pronounced?</inlineHelpText>
        <label>Phonetic/Pronunciation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_Update_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please update this lead&apos;s Email Address on next customer contact</description>
        <inlineHelpText>Please update this lead&apos;s Email Address on next customer contact</inlineHelpText>
        <label>Please Update Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this lead becomes an opportunity, this is the Sales Consultant to Field it.</description>
        <inlineHelpText>If this lead becomes an opportunity, this is the Sales Consultant to Field it.</inlineHelpText>
        <label>Preferred Sales Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadsAsPreferredConsultant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <inlineHelpText>Preferred phone number</inlineHelpText>
        <label>Primary Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign_Name__c</fullName>
        <formula>Primary_Source_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Source Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Campaign where Lead was originally acquired (for cost of acquisition).</inlineHelpText>
        <label>Primary Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads Acquired</relationshipLabel>
        <relationshipName>Leads_Acquired</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Timeline__c</fullName>
        <description>The timeline the customer is interested in purchasing a solar system.</description>
        <inlineHelpText>The timeline the customer is interested in purchasing a solar system.</inlineHelpText>
        <label>Project Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer/Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Notes__c</fullName>
        <label>Property Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether this Lead is a prospect or not? TRUE or FALSE.</description>
        <inlineHelpText>Check if this is a prospect lead.</inlineHelpText>
        <label>Prospect Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_to_Lead_Conversion_Date__c</fullName>
        <description>Date a prospect Lead was converted to an active lead.</description>
        <inlineHelpText>Date a prospect Lead was converted to an active lead.</inlineHelpText>
        <label>Prospect to Lead Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>Lead Source Publisher</description>
        <inlineHelpText>Lead Source Publisher</inlineHelpText>
        <label>Publisher</label>
        <picklist>
            <controllingField>Lead_Source_Detail__c</controllingField>
            <picklistValues>
                <fullName>CBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAQY 102.1 – Classic Rock – Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBBS 104.7 – Country – Syracuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEC 1420 – News/Talk – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEEC 95.9 – Adult Contemporary – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBEN 930 – News/talk – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBFO 88.7 – NPR – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBRK 1340 – Adult Contemporary – Pittsfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBZ-1030 – News – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBZ 98.5 – Sports – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDRC 102.9 – Oldies – Hartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEEI 850 (ESPN) – Sports – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WENJ 97.3 – Sports – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGDJ 1300 – Talk – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGNA 107.1 – Country – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGR 550 – Sports – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGY 810 – News/Talk – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHTT 104.1 – Classic Hits – Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHUD 100.7 – Adult Contemporary – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHYN 560 – News/Talk – Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WKIP 1450 – News/Talk – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOND 1400 – News/Talk – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPG 1450 – Talk – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPUR 107.3 – Country – Atlantic City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WPYX 106.1 – Classic Rock – Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRCH 100.5 – Lite – Hartford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRNQ 92.1 – Lite – Poughkeepsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WROR 105.7 – Classic Hits – Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRWD 107.3 – Country – Poughkeepsie</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QAS_County__c</fullName>
        <description>QAS Auto-Populated County</description>
        <inlineHelpText>QAS Auto-Populated County</inlineHelpText>
        <label>QAS County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Latitude__c</fullName>
        <description>QAS Auto-Populated Latitude</description>
        <inlineHelpText>QAS Auto-Populated Latitude</inlineHelpText>
        <label>QAS Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAS_Longitude__c</fullName>
        <description>QAS Auto-Populated Longitude</description>
        <inlineHelpText>QAS Auto-Populated Longitude</inlineHelpText>
        <label>QAS Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status, &quot;Qualified&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Detail__c</fullName>
        <description>Loss Reason</description>
        <inlineHelpText>Specify Loss Reason Details</inlineHelpText>
        <label>Reason Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <description>What is the reason for the loss?</description>
        <inlineHelpText>What is the reason for the loss?</inlineHelpText>
        <label>Reason for Loss</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsiveness/Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referring_Account_Name__c</fullName>
        <formula>Referring_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account (if any) that referred this lead</description>
        <inlineHelpText>Account (if any) that referred this lead</inlineHelpText>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referred Leads</relationshipLabel>
        <relationshipName>Referred_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Copy_of_Bill__c</fullName>
        <description>Did you request a copy of the customer&apos;s electric bill?</description>
        <inlineHelpText>Did you request a copy of the customer&apos;s electric bill?</inlineHelpText>
        <label>Request Copy of Bill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Financing_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer Requested Financing Options</description>
        <inlineHelpText>Customer Requested Financing Options</inlineHelpText>
        <label>Requested Financing Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Leasing_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested Information about Solar Leasing</description>
        <inlineHelpText>Requested Information about Solar Leasing</inlineHelpText>
        <label>Requested Leasing Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residence_Type_1BOG__c</fullName>
        <label>Residence Type (1BOG)</label>
        <picklist>
            <picklistValues>
                <fullName>Single Family Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Unit Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Age_1BOG__c</fullName>
        <label>Roof Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-20 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <description>What is the roof material made of?</description>
        <inlineHelpText>What is the roof material made of?</inlineHelpText>
        <label>Roof Material</label>
        <picklist>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Metal Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Corrugate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Shake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Structure__c</fullName>
        <description>What is the customer&apos;s roof structure?</description>
        <inlineHelpText>What is the customer&apos;s roof structure?</inlineHelpText>
        <label>Roof Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched - Steep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domed/Curved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>MA Region</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>MD Region</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>WNY Region</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA Region</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
                <color>#33FFFF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Visit_End__c</fullName>
        <description>End Date/Time of the sales visit, as set by a 3rd Party Lead Generator</description>
        <inlineHelpText>End Date/Time of the sales visit, as set by a 3rd Party Lead Generator</inlineHelpText>
        <label>Sales Visit End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Visit_Start__c</fullName>
        <description>Start Date/Time of the sales visit, as set by a 3rd Party Lead Generator</description>
        <inlineHelpText>Start Date/Time of the sales visit, as set by a 3rd Party Lead Generator</inlineHelpText>
        <label>Sales Visit Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>What Name Should Be Included in Mailing Salutations &quot;Dear ....&quot;</description>
        <inlineHelpText>What Name Should Be Included in Mailing Salutations &quot;Dear ....&quot;</inlineHelpText>
        <label>Email/Mail Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <label>Second Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Lead_Source_Detail__c</fullName>
        <description>Dependent on Second Lead Source</description>
        <label>Second Lead Source Detail</label>
        <picklist>
            <controllingField>Second_Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory/Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Personal Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Lead_Source__c</fullName>
        <inlineHelpText>Secondary Lead Source</inlineHelpText>
        <label>Second Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOH - Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit Ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Referring_Account_Name__c</fullName>
        <formula>Secondary_Referring_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Referring Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Referring_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Referring Account</description>
        <label>Secondary Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Secondary Referring Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Source_Campaign_Name__c</fullName>
        <formula>Secondary_Source_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Source Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Source Campaign</description>
        <label>Secondary Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Secondary Source CampaignCampaign)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Generated_Text__c</fullName>
        <formula>if(Self_Generated__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Generated Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this Lead Self-Generated by a Sales Consultant?</description>
        <inlineHelpText>Was this Lead Self-Generated by a Sales Consultant?</inlineHelpText>
        <label>Self-Generated?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>